<resources>
    <string name="app_name">TantraYoga</string>
    <string name="action_settings">Settings</string>
    <string name="post_error">Post error</string>
    <string name="some_error">Some error </string>
    <string name="retry">Retry</string>
    <string name="action_asanas">Асаны</string>
    <string name="programm_name_label">Название программы</string>
    <string name="programm_desc_label">Описание</string>
    <string name="count_of_asanas_label">%1$d asanas</string>
    <string name="count_of_cicles_label">%1$d cicles</string>
    <string name="personal_label">Моя личная</string>
    <string name="isСyclic">Цикличная?</string>
    <string name="count_label">раз</string>
    <string name="tags_label">Теги</string>
    <string name="school_label">Школа</string>
    <string name="programms_title">Курсы</string>
    <string name="asana_label">Асана</string>
    <string name="programm_label">Программа</string>
    <string name="pranayama_label">Пранаяма</string>
    <string name="preparation_label">Подготовка</string>
    <string name="length_label">Длительность</string>
    <string name="consciousness_label">Осознание</string>
    <string name="technique_label">Техника выполнения</string>
    <string name="effects_label">Эффекты</string>
    <string name="is_audio_on_label">Аудиосопровождение</string>
    <string name="sound_begin_label">Звук начала</string>
    <string name="sound_end_label">Звук окончания</string>

    <string name="consciousness_title_text">Far away from behind</string>
    <string name="dropdown_title_text">Far away from behind</string>

    <string name="dropdown_content_text">Buying the right telescope to take your love of astronomy to the next level is a big next step in the development of your passion for the stars. In many ways, it is a big step from someone who is just fooling around with astronomy to a serious student of the science. Buying the right telescope to take your love of astronomy to the next level is a big next step in the development of your passion for the stars. In many ways, it is a big step from someone who is just fooling around with astronomy to a serious student of the science.Buying the right telescope to take your love of astronomy to the next level is a big next step in the development of your passion for the stars. In many ways, it is a big step from someone who is just fooling around with astronomy to a serious student of the science.</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_back">Назад</string>
    <string name="no_items_to_display">Нет данных</string>
    <string name="mcm_search">Начните вводить</string>

</resources>
