<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_padding">

        <ImageView
                android:id="@+id/asanaPhotoView"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:padding="@dimen/default_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_no_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"></ImageView>


        <Spinner
                android:id="@+id/itemTypesSpinner"
                style="?spinnerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/asanaPhotoView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/asanaPhotoView"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        <TextView
                android:id="@+id/itemNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                style="@style/Widget.AppCompat.EditText"
                app:layout_constraintEnd_toStartOf="@+id/asanaPhotoView"
                app:layout_constraintStart_toStartOf="@+id/itemTypesSpinner"
                app:layout_constraintTop_toBottomOf="@+id/itemTypesSpinner"
                tools:text="Асана" />

        <LinearLayout
                android:id="@+id/asanaDetailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@+id/itemNameTextView"
                app:layout_constraintTop_toBottomOf="@+id/asanaPhotoView">

            <hakobastvatsatryan.DropdownTextView
                    android:id="@+id/techniqueDropdownTextView"
                    style="@style/TechniqueTextView"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title_text="@string/technique_label" />

            <hakobastvatsatryan.DropdownTextView
                    android:id="@+id/consciousnessDropdownTextView"
                    style="@style/ConsciousnessTextView"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title_text="@string/consciousness_label" />

            <hakobastvatsatryan.DropdownTextView
                    android:id="@+id/effectsDropdownTextView"
                    style="@style/EffectsTextView"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title_text="@string/effects_label" />
        </LinearLayout>

        <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/asanaPhotoView"
                app:layout_constraintStart_toStartOf="@+id/asanaDetailContainer"
                app:layout_constraintTop_toBottomOf="@+id/asanaDetailContainer">

            <TableRow style="?valueRowStyle">

                <TextView
                        style="?labelStyle"
                        android:text="@string/preparation_label" />

                <EditText
                        android:id="@+id/preparationEditText"
                        style="?valueStyle"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        tools:text="5:30" />
            </TableRow>

            <TableRow style="?valueRowStyle">

                <TextView
                        style="?labelStyle"
                        android:text="@string/length_label" />

                <EditText
                        android:id="@+id/lengthEditText"
                        style="?valueStyle"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        tools:text="5:30" />
            </TableRow>

            <TableRow style="?valueRowStyle">

                <TextView
                        style="?labelStyle"
                        android:text="@string/consciousness_label" />

                <EditText
                        android:id="@+id/consciousnessEditText"
                        style="?valueStyle"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        tools:text="5:30" />
            </TableRow>

            <TableRow style="?valueRowStyle">

                <TextView
                        style="?labelStyle"
                        android:text="@string/is_audio_on_label" />

                <Switch
                        android:id="@+id/audioGuideSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:gravity="left|center"
                        android:textAppearance="@style/Widget.Coins.Flat.LabelTextAppearance" />
            </TableRow>

            <TableRow style="?valueRowStyle">

                <TextView
                        style="?labelStyle"
                        android:text="@string/sound_begin_label" />

                <Button
                        android:id="@+id/soundBeginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:padding="@dimen/default_margin"
                        android:background="@drawable/technique_text_view_regular"
                        android:gravity="left|center"
                        android:textAlignment="center"
                        android:text="Гонг" />
            </TableRow>

            <TableRow style="?valueRowStyle">

                <TextView
                        style="?labelStyle"
                        android:text="@string/sound_end_label" />

                <Button
                        android:id="@+id/soundEndButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:padding="@dimen/default_margin"
                        android:background="@drawable/technique_text_view_regular"
                        android:textColor="@color/white"
                        android:gravity="left|center"
                        android:textAlignment="center"
                        android:text="Колокольчик" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>